--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INFO2180 Lab 1</title>
+     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
  <header>
@@ -12,11 +13,12 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
- <h2>[Your Name]</h2>
- <p>[Paragraph about myself]</p>
+ <h2>Kyle Sterling</h2>
+ <p> I grew an interest in web developemnt when decided to make a career in the information security field. I experimented by creating a simple wordpress site and my interest for web developement just took on a life of thier own from there.
+ </p>
  </main>
  <footer>
- <p>Copyright &copy; 2020 <Your Name>.</p> 
+ <p>Copyright &copy; 2020 Kyle Sterling.</p> 
  </footer>
 </body>
 </html>
