--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
  </header>
  <main>
  <h2>Kyle Sterling</h2>
- <p> I grew an interest in web developemnt when decided to make a career in the information security field. I experimented by creating a simple wordpress site and my interest for web developement just took on a life of thier own from there.
+  <img src="img.jpg" alt="Kyle Sterling"> 
+ <p> I grew an interest in web developemnt when decided to make a career in the information security field. I experimented by creating a simple wordpress site and my interest for web developement just took on a life of thier own from there. My hope is to grow and continue to develope my web skills to higher levels.
  </p>
  </main>
  <footer>
